--- a/env/gds_arm64.yml
+++ b/env/gds_arm64.yml
@@ -17,7 +17,7 @@ dependencies:
   - flake8
   - geoalchemy2
   - geocube
-  - geopandas
+  - geopandas>=1.0
   - geopy
   - gpxpy
   - gstools
@@ -55,14 +55,13 @@ dependencies:
     - watermark
   - polyline
   - pooch
-  - pygeoda
+    #- pygeoda
   - protobuf
   - psycopg2
   - pyarrow
-  - pyogrio
   - pyppeteer
   - pyrosm
-  - pysal
+  - pysal==24.7
   - pystac-client
   - pytest
   - python-duckdb
@@ -82,7 +81,6 @@ dependencies:
   - topojson
   - urbanaccess
   - xarray-spatial
-  - xarray_leaflet
   - xlrd
   - xlsxwriter
   - xvec
