Remove GDS_VERSION from Makefile as it's passed dynamically now + edits on gds_amd

--- a/env/gds_amd64.yml
+++ b/env/gds_amd64.yml
@@ -55,14 +55,13 @@ dependencies:
     - watermark
   - polyline
   - pooch
-  - pygeoda
+    #- pygeoda
   - protobuf
   - psycopg2
   - pyarrow
-  - pyogrio
   - pyppeteer
   - pyrosm
-  - pysal
+  - pysal==24.7
   - pystac-client
   - pytest
   - python-duckdb
