Make gds_code build dynamically named on make build code

--- a/frontend_code/Dockerfile
+++ b/frontend_code/Dockerfile
@@ -1,4 +1,5 @@
-FROM darribas/gds:11.0gc
+ARG base_image
+FROM ${base_image}
 
 USER root
 
@@ -13,7 +14,7 @@ RUN /usr/bin/code-server \
      --install-extension ms-toolsai.jupyter \
      --install-extension ms-python.python \
      --install-extension james-yu.latex-workshop \
-     --install-extension equinusocio.vsc-material-theme \
+     --install-extension Catppuccin.catppuccin-vsc \
       && fix-permissions /home/$NB_USER/.local/share/code-server/
 
 ENV QUARTO_PYTHON="/opt/conda/envs/gds/bin/python"
