--- a/env/gds_amd64.yml
+++ b/env/gds_amd64.yml
@@ -14,6 +14,7 @@ dependencies:
   - dask
   - dask-geopandas
   - datashader
+  - exactextract
   - flake8
   - geoalchemy2
   - geocube
@@ -62,7 +63,7 @@ dependencies:
   - pyarrow
   - pyppeteer
   - pyrosm
-  - pysal==24.7
+  - pysal
   - pystac-client
   - pytest
   - python-duckdb
@@ -124,8 +125,8 @@ dependencies:
   - r-ncdf4
   - r-proj4
   - r-raster
-  - r-rgdal
-  - r-rgeos
+    #- r-rgdal
+    #- r-rgeos
   - r-rlas
   - r-sf
   - r-sp
@@ -136,7 +137,7 @@ dependencies:
   - r-stars
   - r-terra
   - r-tidync
-  - r-tmap
+    #- r-tmap # Off until v4 is on conda
   - r-geor
   - r-geosphere
     ## GDS
